--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,3 +7,8 @@
   max-width   : 70rem;
   padding     : 0 1rem;
 }
+
+@media (max-width: 768px) {
+  html { font-size: 87.5%; }
+  .wrapper { grid-template-columns: 1fr; }
+}
