--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -75,7 +75,7 @@
   background-color : var(--gray-900);
   border           : 0;
   border-radius    : 8px;
-  columns          : var(--gray-100);
+  color            : var(--gray-100);
   height           : 6rem;
   list-style       : 1.4;
   margin-top       : 1rem;
