--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -105,9 +105,14 @@
   transition    : background-color 0.1s;
 }
 
-.commentForm button[type=submit]:hover, 
-.commentForm button[type=submit]:focus {
+.commentForm button[type=submit]:not(:disabled):hover, 
+.commentForm button[type=submit]:not(:disabled):focus {
   background: var(--green-300);
+}
+
+.commentForm button[type=submit]:disabled {
+  cursor  : not-allowed;
+  opacity : 0.7;
 }
 
 .commentList { margin-top: 2rem; }
